Add cpm2 kernels

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,16 +19,14 @@ project(Scanner)
 ###### Config options #####
 option(BUILD_CUDA "" ON)
 option(BUILD_TESTS "" ON)
-option(BUILD_VIDEO_EVALUATORS "" ON)
-option(BUILD_IMAGE_EVALUATORS "" OFF)
-option(BUILD_IMAGE_PROCESSING_EVALUATORS "" ON)
-option(BUILD_CAFFE_EVALUATORS "" OFF)
-option(BUILD_CAFFE_INPUT_EVALUATORS "" OFF)
-option(BUILD_CPM2_EVALUATORS "" OFF)
-option(BUILD_MOVIE_ANALYSIS_EVALUATORS "" OFF)
-option(BUILD_TRACKER_EVALUATORS "" OFF)
-option(BUILD_UTIL_EVALUATORS "" OFF)
-option(BUILD_MEDIAN_EVALUATORS "" OFF)
+option(BUILD_IMAGE_PROCESSING_OPS "" ON)
+option(BUILD_CAFFE_OPS "" OFF)
+option(BUILD_CAFFE_INPUT_OPS "" OFF)
+option(BUILD_CPM2_OPS "" OFF)
+option(BUILD_MOVIE_ANALYSIS_OPS "" OFF)
+option(BUILD_TRACKER_OPS "" OFF)
+option(BUILD_UTIL_OPS "" OFF)
+option(BUILD_MEDIAN_OPS "" OFF)
 option(BUILD_SERVER "" OFF)
 option(BUILD_COMPARISON "" OFF)
 option(BUILD_EXAMPLES "" ON)
@@ -108,18 +106,13 @@ if (BUILD_CUDA)
   endif()
 endif()
 
-if (BUILD_VIDEO_EVALUATORS)
-  list(APPEND OPENCV_DESIRED_COMPONENTS core highgui imgproc video videoio)
-
-  # Check for intel HW decode
-  #find_package(MFX)
-endif()
+list(APPEND OPENCV_DESIRED_COMPONENTS core highgui imgproc video videoio)
 
 if (BUILD_CUDA)
   add_library(scanner_halide scanner/engine/halide_context.cpp)
 endif()
 
-if (BUILD_CAFFE_EVALUATORS)
+if (BUILD_CAFFE_OPS)
   find_package(Caffe REQUIRED)
   add_definitions(-DHAVE_CAFFE)
   include_directories(${CAFFE_INCLUDE_DIRS})
@@ -133,7 +126,7 @@ if (BUILD_CAFFE_EVALUATORS)
     add_halide_target(scanner/evaluators/caffe/default/caffe_input_transformer_gpu.cpp cuda)
   endif()
 
-  if (BUILD_CAFFE_INPUT_EVALUATORS)
+  if (BUILD_CAFFE_INPUT_OPS)
     # Requires opencv3
     list(APPEND OPENCV_DESIRED_COMPONENTS core highgui imgproc imgcodecs)
     if (BUILD_CUDA)
@@ -143,7 +136,7 @@ if (BUILD_CAFFE_EVALUATORS)
   endif()
 endif()
 
-if (BUILD_TRACKER_EVALUATORS)
+if (BUILD_TRACKER_OPS)
   find_package(Eigen REQUIRED)
   find_package(Struck REQUIRED CONFIG
     PATHS "thirdparty/build/bin/struck")
@@ -161,7 +154,7 @@ if (BUILD_SERVER)
     "${FOLLY_INCLUDE_DIRS}")
 endif()
 
-if (BUILD_UTIL_EVALUATORS)
+if (BUILD_UTIL_OPS)
   if (OPENCV_MAJOR_VERSION EQUAL 3)
      list(APPEND OPENCV_DESIRED_COMPONENTS core highgui imgproc video videoio)
   else()
@@ -169,7 +162,7 @@ if (BUILD_UTIL_EVALUATORS)
   endif()
 endif()
 
-if (BUILD_MOVIE_ANALYSIS_EVALUATORS)
+if (BUILD_MOVIE_ANALYSIS_OPS)
   set(DOPPIA_DIR /homes/wcrichto/rodrigob-doppia-2f93f2657960/src)
   set(OFDIS_DIR /homes/wcrichto/OF_DIS)
   if (OPENCV_MAJOR_VERSION EQUAL 3)
@@ -203,7 +196,7 @@ if (BUILD_MOVIE_ANALYSIS_EVALUATORS)
     "${SCANNER_LIBRARIES}")
 endif()
 
-if (BUILD_MEDIAN_EVALUATORS)
+if (BUILD_MEDIAN_OPS)
   find_package(Eigen)
 endif()
 
@@ -383,7 +376,7 @@ if (HALIDE_FOUND)
   endforeach()
 endif()
 
-if (BUILD_MOVIE_ANALYSIS_EVALUATORS)
+if (BUILD_MOVIE_ANALYSIS_OPS)
   set_target_properties(scanner PROPERTIES COMPILE_DEFINITIONS "SELECTMODE=1")
   set_property(TARGET scanner APPEND PROPERTY COMPILE_DEFINITIONS "SELECTCHANNEL=1")
 endif()
