Make sparse frame loading work

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,11 +19,11 @@ project(Scanner)
 ###### Config options #####
 option(BUILD_CUDA "" ON)
 option(BUILD_TESTS "" ON)
-option(BUILD_IMAGE_PROCESSING_OPS "" ON)
+option(BUILD_IMAGE_OPS "" ON)
 option(BUILD_CAFFE_OPS "" OFF)
 option(BUILD_CAFFE_INPUT_OPS "" OFF)
 option(BUILD_CPM2_OPS "" OFF)
-option(BUILD_MOVIE_ANALYSIS_OPS "" OFF)
+option(BUILD_MOVIE_ANALYSIS_OPS "" ON)
 option(BUILD_TRACKER_OPS "" OFF)
 option(BUILD_UTIL_OPS "" OFF)
 option(BUILD_MEDIAN_OPS "" OFF)
