Refactored kernels into separate build phase

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,14 +19,6 @@ project(Scanner)
 ###### Config options #####
 option(BUILD_CUDA "" ON)
 option(BUILD_TESTS "" ON)
-option(BUILD_IMAGE_OPS "" ON)
-option(BUILD_CAFFE_OPS "" OFF)
-option(BUILD_CAFFE_INPUT_OPS "" OFF)
-option(BUILD_CPM2_OPS "" OFF)
-option(BUILD_MOVIE_ANALYSIS_OPS "" ON)
-option(BUILD_TRACKER_OPS "" OFF)
-option(BUILD_UTIL_OPS "" OFF)
-option(BUILD_MEDIAN_OPS "" OFF)
 option(BUILD_SERVER "" OFF)
 option(BUILD_COMPARISON "" OFF)
 option(BUILD_EXAMPLES "" ON)
@@ -76,27 +68,6 @@ if (ENABLE_PROFILING)
 endif()
 
 ###### Optional Dependencies #######
-set(OPENCV_DESIRED_COMPONENTS)
-set(OPENCV_MAJOR_VERSION 3)
-
-set(HALIDE_TARGETS)
-macro(add_halide_target SRC TARGET)
-  if (NOT HALIDE_FOUND)
-    find_package(Halide REQUIRED)
-    include(${CMAKE_SOURCE_DIR}/cmake/Util/HalideGenerator.cmake)
-    include_directories("${HALIDE_INCLUDE_DIR}")
-  endif()
-
-  get_filename_component(NAME ${SRC} NAME_WE)
-  set(GENERATOR ${NAME}.generator)
-  halide_add_generator(${GENERATOR}
-    SRCS ${SRC})
-  halide_add_aot_library(${NAME}
-    GENERATOR_TARGET ${GENERATOR}
-    GENERATOR_ARGS target=${TARGET})
-  list(APPEND HALIDE_TARGETS ${NAME})
-endmacro()
-
 if (BUILD_CUDA)
   find_package(CUDA REQUIRED)
   add_definitions(-DHAVE_CUDA)
@@ -106,105 +77,8 @@ if (BUILD_CUDA)
   endif()
 endif()
 
-list(APPEND OPENCV_DESIRED_COMPONENTS core highgui imgproc video videoio)
-
 if (BUILD_CUDA)
   add_library(scanner_halide scanner/engine/halide_context.cpp)
-endif()
-
-if (BUILD_CAFFE_OPS)
-  find_package(Caffe REQUIRED)
-  add_definitions(-DHAVE_CAFFE)
-  include_directories(${CAFFE_INCLUDE_DIRS})
-
-  if (NOT BUILD_CUDA)
-    add_definitions(-DCPU_ONLY)
-  endif()
-
-  add_halide_target(scanner/evaluators/caffe/default/caffe_input_transformer_cpu.cpp host)
-  if (BUILD_CUDA)
-    add_halide_target(scanner/evaluators/caffe/default/caffe_input_transformer_gpu.cpp cuda)
-  endif()
-
-  if (BUILD_CAFFE_INPUT_OPS)
-    # Requires opencv3
-    list(APPEND OPENCV_DESIRED_COMPONENTS core highgui imgproc imgcodecs)
-    if (BUILD_CUDA)
-      list(APPEND OPENCV_DESIRED_COMPONENTS
-        cudawarping cudaimgproc cudafilters cudaarithm)
-    endif()
-  endif()
-endif()
-
-if (BUILD_TRACKER_OPS)
-  find_package(Eigen REQUIRED)
-  find_package(Struck REQUIRED CONFIG
-    PATHS "thirdparty/build/bin/struck")
-  include_directories(
-    "${EIGEN_INCLUDE_DIRS}"
-    "${STRUCK_INCLUDE_DIRS}")
-endif()
-
-if (BUILD_SERVER)
-  find_package(Proxygen REQUIRED)
-  find_package(Folly REQUIRED)
-  add_definitions(-DHAVE_SERVER)
-  include_directories(
-    "${PROXYGEN_INCLUDE_DIRS}"
-    "${FOLLY_INCLUDE_DIRS}")
-endif()
-
-if (BUILD_UTIL_OPS)
-  if (OPENCV_MAJOR_VERSION EQUAL 3)
-     list(APPEND OPENCV_DESIRED_COMPONENTS core highgui imgproc video videoio)
-  else()
-     list(APPEND OPENCV_DESIRED_COMPONENTS core highgui imgproc video)
-  endif()
-endif()
-
-if (BUILD_MOVIE_ANALYSIS_OPS)
-  set(DOPPIA_DIR /homes/wcrichto/rodrigob-doppia-2f93f2657960/src)
-  set(OFDIS_DIR /homes/wcrichto/OF_DIS)
-  if (OPENCV_MAJOR_VERSION EQUAL 3)
-      list(APPEND OPENCV_DESIRED_COMPONENTS core highgui imgproc objdetect video)
-      if (BUILD_CUDA)
-          list(APPEND OPENCV_DESIRED_COMPONENTS cudaoptflow cudacodec)
-      endif()
-  else()
-      list(APPEND OPENCV_DESIRED_COMPONENTS core highgui imgproc objdetect video)
-  endif()
-  find_package(Eigen REQUIRED)
-  include_directories(
-    "${EIGEN_INCLUDE_DIRS}"
-    "${OFDIS_DIR}"
-    "${DOPPIA_DIR}")
-  file(GLOB OFDIS_SOURCES
-    ${OFDIS_DIR}/FDF1.0.1/*.c
-    ${OFDIS_DIR}/oflow.cpp
-    ${OFDIS_DIR}/patchgrid.cpp
-    ${OFDIS_DIR}/patch.cpp
-    ${OFDIS_DIR}/refine_variational.cpp)
-  add_definitions(-DWITH_OPENMP=true)
-  FIND_PACKAGE( OpenMP REQUIRED)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
-  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
-  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
-  #link_directories(${DOPPIA_DIR}/applications/objects_detection_lib/build)
-  set(SCANNER_LIBRARIES
-    #"-lmonocular_objects_detection"
-    #"-liomp5"
-    "${SCANNER_LIBRARIES}")
-endif()
-
-if (BUILD_MEDIAN_OPS)
-  find_package(Eigen)
-endif()
-
-if (OPENCV_DESIRED_COMPONENTS)
-  find_package(OpenCV REQUIRED COMPONENTS ${OPENCV_DESIRED_COMPONENTS})
-  include_directories(SYSTEM
-    ${OpenCV_INCLUDE_DIRS})
-  add_definitions(-DUSE_OPENCV -DHAVE_OPENCV)
 endif()
 
 ###### Required Dependencies #######
@@ -237,9 +111,6 @@ set(SCANNER_LIBRARIES
   "${FFMPEG_LIBRARIES}"
   "-L/opt/ffmpeg-3.2.2/lib"
   "-lswscale"
-  "${STRUCK_LIBRARIES}"
-  "${OpenCV_LIBRARIES}"
-  "${CAFFE_LIBRARIES}"
   "${LIBLZMA_LIBRARIES}"
   "${OPENSSL_LIBRARIES}"
   "${BZIP2_LIBRARIES}"
@@ -290,8 +161,7 @@ endif()
 ###### Project code #######
 set(PROTO_FILES
   scanner/metadata.proto
-  scanner/kernels/args.proto
-  scanner/kernels/types.proto)
+  scanner/types.proto)
 
 set(GRPC_PROTO_FILES
   scanner/engine/rpc.proto)
@@ -309,16 +179,6 @@ add_custom_target(proto_files DEPENDS
 
 macro(add_deps)
   add_dependencies(${targetName} proto_files)
-  if (HALIDE_FOUND)
-    foreach(HALIDE_TARGET ${HALIDE_TARGETS})
-      add_dependencies(${targetName} "${HALIDE_TARGET}.exec_generator")
-      target_include_directories(${targetName} PUBLIC
-        "${PROJECT_BINARY_DIR}/generator_genfiles")
-    endforeach()
-    if (BUILD_CUDA)
-      add_dependencies(${targetName} scanner_halide)
-    endif()
-  endif()
 endmacro()
 
 function(add_library targetName)
@@ -335,23 +195,10 @@ set(CMAKE_CXX_FLAGS_DEBUG "-DDEBUG")
 
 add_subdirectory(scanner)
 
-if (BUILD_COMPARISON)
-  add_subdirectory(comparison)
-endif()
-
-if (BUILD_EXAMPLES)
-  add_subdirectory(examples)
-endif()
-
-if (BUILD_TESTS)
-  add_subdirectory(tests)
-endif()
-
 add_library(scanner SHARED
   $<TARGET_OBJECTS:api>
   $<TARGET_OBJECTS:engine>
   $<TARGET_OBJECTS:video>
-  $<TARGET_OBJECTS:kernels>
   $<TARGET_OBJECTS:util>
   ${PROTO_SRCS}
   ${GRPC_PROTO_SRCS}
@@ -367,15 +214,6 @@ target_link_libraries(scanner_bindings PUBLIC
   scanner
   ${Boost_LIBRARIES}
   ${PythonLibs_LIBRARIES})
-
-if (HALIDE_FOUND)
-  foreach(TARGET ${HALIDE_TARGETS})
-    halide_add_aot_library_dependency(scanner ${TARGET})
-    if (BUILD_CUDA)
-      target_link_libraries(scanner PRIVATE scanner_halide)
-    endif()
-  endforeach()
-endif()
 
 if (BUILD_MOVIE_ANALYSIS_OPS)
   set_target_properties(scanner PROPERTIES COMPILE_DEFINITIONS "SELECTMODE=1")
@@ -411,3 +249,17 @@ foreach(FIL ${PROTO_FILES} ${GRPC_PROTO_FILES})
   add_custom_command(TARGET proto_files POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E touch ${PYDIR}/${DIR_FIL}/__init__.py)
 endforeach()
+
+add_subdirectory(stdlib)
+
+if (BUILD_COMPARISON)
+  add_subdirectory(comparison)
+endif()
+
+if (BUILD_EXAMPLES)
+  add_subdirectory(examples)
+endif()
+
+if (BUILD_TESTS)
+  add_subdirectory(tests)
+endif()
