At last, the sound of silence

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -250,7 +250,7 @@ foreach(FIL ${PROTO_FILES} ${GRPC_PROTO_FILES})
     COMMAND ${CMAKE_COMMAND} -E touch ${PYDIR}/${DIR_FIL}/__init__.py)
 endforeach()
 
-add_subdirectory(stdlib)
+add_subdirectory(kernels)
 
 if (BUILD_COMPARISON)
   add_subdirectory(comparison)
