--- a/examples/simple/CMakeLists.txt
+++ b/examples/simple/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_executable(example_simple main.cpp)
-target_link_libraries(example_simple scanner stdlib)
+target_link_libraries(example_simple scanner kernels)
