--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_executable(tests_decode decode.cpp)
-target_link_libraries(tests_decode scanner stdlib)
+target_link_libraries(tests_decode scanner kernels)
 
 add_test(TestsDecode tests_decode)
