--- a/.travis.yml
+++ b/.travis.yml
@@ -29,5 +29,4 @@ script:
 
 after_success:
 - ./scripts/publish-docker.sh
-# TODO(wcrichto): enable this when repo is public
-# - ./scripts/publish-doxygen.sh
+- ./scripts/publish-doxygen.sh
