Use OpenFace CMake module, update storehouse

--- a/stdlib/CMakeLists.txt
+++ b/stdlib/CMakeLists.txt
@@ -5,7 +5,7 @@ option(BUILD_IMGPROC_OPS "" ON)
 option(BUILD_CAFFE_OPS "" ON)
 option(BUILD_CPM2_OPS "" OFF)
 option(BUILD_MOTION_OPS "" ON)
-option(BUILD_OPENFACE_OPS "" OFF)
+option(BUILD_OPENFACE_OPS "" ON)
 
 set(STDLIB_LIBRARIES)
 set(OPENCV_MAJOR_VERSION 3)
