--- a/stdlib/openface/CMakeLists.txt
+++ b/stdlib/openface/CMakeLists.txt
@@ -1,17 +1,10 @@
-# TODO: set up a FindOpenFace.cmake
-set(OpenFace_DIR "/home/wcrichto/.deps/OpenFace")
+find_package(OpenFace REQUIRED)
 
 set(SOURCE_FILES openface_kernel.cpp)
 
 add_library(openface OBJECT ${SOURCE_FILES})
 
-target_include_directories(openface PUBLIC
-  "${OpenFace_DIR}/lib/local/LandmarkDetector/include"
-  "${OpenFace_DIR}/lib/local/FaceAnalyser/include"
-  "${OpenFace_DIR}/lib/3rdParty/dlib/include")
-list(APPEND STDLIB_LIBRARIES
-  "${OpenFace_DIR}/build/lib/local/LandmarkDetector/libLandmarkDetector.a"
-  "${OpenFace_DIR}/build/lib/local/FaceAnalyser/libFaceAnalyser.a"
-  "${OpenFace_DIR}/build/lib/3rdParty/dlib/libdlib.a")
+target_include_directories(openface PUBLIC "${OpenFace_INCLUDE_DIRS}")
+list(APPEND STDLIB_LIBRARIES "${OpenFace_LIBRARIES}")
 
 set(STDLIB_LIBRARIES ${STDLIB_LIBRARIES} PARENT_SCOPE)
