Condense libstorehouse and storehousepy to same library

--- a/scanner/engine/CMakeLists.txt
+++ b/scanner/engine/CMakeLists.txt
@@ -1,3 +1,6 @@
+get_property(dirs DIRECTORY ${CMAKE_SOURCE_DIR} PROPERTY INCLUDE_DIRECTORIES)
+configure_file(python.in.cpp python.cpp)
+
 set(SOURCE_FILES
   master.cpp
   worker.cpp
@@ -9,7 +12,8 @@ set(SOURCE_FILES
   sampler.cpp
   db.cpp
   kernel_registry.cpp
-  op_registry.cpp)
+  op_registry.cpp
+  python.cpp)
 
 add_library(engine OBJECT
   ${SOURCE_FILES})
