--- a/scanner/video/CMakeLists.txt
+++ b/scanner/video/CMakeLists.txt
@@ -23,12 +23,8 @@ add_library(video OBJECT
 set_source_files_properties(${PROTO_SRCS} ${GRPC_PROTO_SRCS} PROPERTIES
   GENERATED TRUE)
 
-add_executable(DecoderAutomataTest decoder_automata_test.cpp
-  $<TARGET_OBJECTS:video>
-  $<TARGET_OBJECTS:util>
-  $<TARGET_OBJECTS:engine>
-  ${PROTO_SRCS}
-  ${GRPC_PROTO_SRCS})
-target_link_libraries(DecoderAutomataTest ${GTEST_LIBRARIES} ${GTEST_LIB_MAIN}
-  ${SCANNER_LIBRARIES})
+add_executable(DecoderAutomataTest decoder_automata_test.cpp)
+target_link_libraries(DecoderAutomataTest
+  ${GTEST_LIBRARIES} ${GTEST_LIB_MAIN}
+  scanner)
 add_test(DecoderAutomataTest DecoderAutomataTest)
