Add ffmpeg test

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,3 +8,8 @@ endif()
 add_test(
   NAME PythonTests
   COMMAND pytest ${CMAKE_CURRENT_SOURCE_DIR} -xv ${MARKERS})
+
+
+add_executable(FfmpegTest ffmpeg_test.cpp)
+target_link_libraries(FfmpegTest ${GTEST_LIBRARIES} ${GTEST_LIB_MAIN} scanner stdlib)
+add_test(FfmpegTests FfmpegTest)
